Fixing body layout on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -57,8 +57,8 @@ body {
   font-family: var(--ff);
   font-weight: var(--fw-300);
   font-size: var(--font-size);
-  min-height: 100dvh;
-  min-height: 100vh;
+  /* min-height: 100dvh; */
+  /* min-height: 100vh; */
 }
 
 .App {
